index.html modified

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div id="menubtn" class="fas fa-bars-staggered"></div>
             <a href="home.html" class="logo"><i class="fas fa-briefcase"></i>JobHire.</a>
             <nav class="navbar">
-                <a href="home.html">home</a>
+                <a href="home.html">Home</a>
                 <a href="about.html">about us</a>
                 <a href="jobs.html">jobs</a>
                 <a href="contact.html">contact us</a>
