updatation of files

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <header class="header">
         <section class="flex">
             <div id="menubtn" class="fas fa-bars-staggered"></div>
-            <a href="home.html" class="logo"><i class="fas fa-briefcase"></i>JobHire.</a>
+            <a href="index.html" class="logo"><i class="fas fa-briefcase"></i>JobHire.</a>
             <nav class="navbar">
-                <a href="home.html">Home</a>
+                <a href="index.html">home</a>
                 <a href="about.html">about us</a>
                 <a href="jobs.html">jobs</a>
                 <a href="contact.html">contact us</a>
@@ -273,7 +273,7 @@
         <section class="grid">
             <div class="box">
                 <h3>quick links</h3>
-                <a href="home.html"><i class="fas fa-angle-right"></i>home</a>
+                <a href="index.html"><i class="fas fa-angle-right"></i>home</a>
                 <a href="about.html"><i class="fas fa-angle-right"></i>about us</a>
                 <a href="jobs.html"><i class="fas fa-angle-right"></i>jobs</a>
                 <a href="contact.html"><i class="fas fa-angle-right"></i>contact us</a>
