--- a/jobs.html
+++ b/jobs.html
@@ -456,7 +456,7 @@
 
             <div class="box">
                 <div class="company">
-                    <img src="/images/icon-1.png" alt="">
+                    <img src="./images/icon-1.png" alt="">
                     <div>
                         <h3>tech infosys co.</h3>
                         <p>5 days ago</p>
@@ -479,7 +479,7 @@
 
             <div class="box">
                 <div class="company">
-                    <img src="/images/icon-2.png" alt="">
+                    <img src="./images/icon-2.png" alt="">
                     <div>
                         <h3>edtech.ltd</h3>
                         <p>2 days ago</p>
@@ -502,7 +502,7 @@
 
             <div class="box">
                 <div class="company">
-                    <img src="/images/icon-3.png" alt="">
+                    <img src="./images/icon-3.png" alt="">
                     <div>
                         <h3>software solutions</h3>
                         <p>posted today</p>
