--- a/about.html
+++ b/about.html
@@ -13,9 +13,9 @@
     <header class="header">
         <section class="flex">
             <div id="menubtn" class="fas fa-bars-staggered"></div>
-            <a href="home.html" class="logo"><i class="fas fa-briefcase"></i>JobHire.</a>
+            <a href="index.html" class="logo"><i class="fas fa-briefcase"></i>JobHire.</a>
             <nav class="navbar">
-                <a href="home.html">home</a>
+                <a href="index.html">home</a>
                 <a href="about.html">about us</a>
                 <a href="jobs.html">jobs</a>
                 <a href="contact.html">contact us</a>
@@ -32,7 +32,7 @@
     </div>
 
     <section class="about">
-        <img src="images/about.png" class="img" alt="">
+        <img src="./images/about.png" class="img" alt="">
         <div class="box">
             <h3>why choose us?</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel incidunt veritatis quas quaerat. Vel
@@ -64,7 +64,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium dolore officiis sunt
                     necessitatibus, laudantium dicta!</p>
                 <div class="user">
-                    <img src="images/pic-1.jpg" alt="">
+                    <img src="./images/pic-1.jpg" alt="">
                     <div>
                         <h3>Rahul Sharma</h3>
                         <span>web designer</span>
@@ -83,7 +83,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium dolore officiis sunt
                     necessitatibus, laudantium dicta!</p>
                 <div class="user">
-                    <img src="images/pic-2.jpg" alt="">
+                    <img src="./images/pic-2.jpg" alt="">
                     <div>
                         <h3>ayaan arora</h3>
                         <span>data anaylst</span>
@@ -102,7 +102,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium dolore officiis sunt
                     necessitatibus, laudantium dicta!</p>
                 <div class="user">
-                    <img src="images/pic-3.jpg" alt="">
+                    <img src="./images/pic-3.jpg" alt="">
                     <div>
                         <h3>rameet</h3>
                         <span>software engineer</span>
@@ -121,7 +121,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium dolore officiis sunt
                     necessitatibus, laudantium dicta!</p>
                 <div class="user">
-                    <img src="images/pic-5.jpg" alt="">
+                    <img src="./images/pic-5.jpg" alt="">
                     <div>
                         <h3>parineeti mishra</h3>
                         <span>software engineer</span>
@@ -140,7 +140,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium dolore officiis sunt
                     necessitatibus, laudantium dicta!</p>
                 <div class="user">
-                    <img src="images/pic-4.jpg" alt="">
+                    <img src="./images/pic-4.jpg" alt="">
                     <div>
                         <h3>jasmine yadav</h3>
                         <span>software engineer</span>
@@ -159,7 +159,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium dolore officiis sunt
                     necessitatibus, laudantium dicta!</p>
                 <div class="user">
-                    <img src="images/pic-6.jpg" alt="">
+                    <img src="./images/pic-6.jpg" alt="">
                     <div>
                         <h3>mahir sehgal</h3>
                         <span>AI engineer</span>
@@ -175,7 +175,7 @@
         <section class="grid">
             <div class="box">
                 <h3>quick links</h3>
-                <a href="home.html"><i class="fas fa-angle-right"></i>home</a>
+                <a href="index.html"><i class="fas fa-angle-right"></i>home</a>
                 <a href="about.html"><i class="fas fa-angle-right"></i>about us</a>
                 <a href="jobs.html"><i class="fas fa-angle-right"></i>jobs</a>
                 <a href="contact.html"><i class="fas fa-angle-right"></i>contact us</a>
