--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div id="menubtn" class="fas fa-bars-staggered"></div>
             <a href="index.html" class="logo"><i class="fas fa-briefcase"></i>JobHire.</a>
             <nav class="navbar">
-                <a href="/">home</a>
+                <a href="index.html">home</a>
                 <a href="about.html">about us</a>
                 <a href="jobs.html">jobs</a>
                 <a href="contact.html">contact us</a>
@@ -124,7 +124,7 @@
 
             <div class="box">
                 <div class="company">
-                    <img src="/images/icon-1.png" alt="">
+                    <img src="./images/icon-1.png" alt="">
                     <div>
                         <h3>tech infosys co.</h3>
                         <p>5 days ago</p>
@@ -147,7 +147,7 @@
 
             <div class="box">
                 <div class="company">
-                    <img src="/images/icon-2.png" alt="">
+                    <img src="./images/icon-2.png" alt="">
                     <div>
                         <h3>edtech.ltd</h3>
                         <p>2 days ago</p>
@@ -170,7 +170,7 @@
 
             <div class="box">
                 <div class="company">
-                    <img src="/images/icon-3.png" alt="">
+                    <img src="./images/icon-3.png" alt="">
                     <div>
                         <h3>software solutions</h3>
                         <p>posted today</p>
@@ -193,7 +193,7 @@
 
             <div class="box">
                 <div class="company">
-                    <img src="/images/icon-4.png" alt="">
+                    <img src="./images/icon-4.png" alt="">
                     <div>
                         <h3>IT world</h3>
                         <p>15 days ago</p>
@@ -216,7 +216,7 @@
 
             <div class="box">
                 <div class="company">
-                    <img src="/images/icon-5.png" alt="">
+                    <img src="./images/icon-5.png" alt="">
                     <div>
                         <h3>info statics</h3>
                         <p>1 day ago</p>
@@ -239,7 +239,7 @@
 
             <div class="box">
                 <div class="company">
-                    <img src="/images/icon-6.png" alt="">
+                    <img src="./images/icon-6.png" alt="">
                     <div>
                         <h3>mass india</h3>
                         <p>12 days ago</p>
