--- a/jobs.html
+++ b/jobs.html
@@ -13,9 +13,9 @@
     <header class="header">
         <section class="flex">
             <div id="menubtn" class="fas fa-bars-staggered"></div>
-            <a href="home.html" class="logo"><i class="fas fa-briefcase"></i>JobHire.</a>
+            <a href="index.html" class="logo"><i class="fas fa-briefcase"></i>JobHire.</a>
             <nav class="navbar">
-                <a href="home.html">home</a>
+                <a href="index.html">home</a>
                 <a href="about.html">about us</a>
                 <a href="jobs.html">jobs</a>
                 <a href="contact.html">contact us</a>
@@ -111,7 +111,7 @@
 
             <div class="box">
                 <div class="company">
-                    <img src="/images/icon-1.png" alt="">
+                    <img src="./images/icon-1.png" alt="">
                     <div>
                         <h3>tech infosys co.</h3>
                         <p>5 days ago</p>
@@ -134,7 +134,7 @@
 
             <div class="box">
                 <div class="company">
-                    <img src="/images/icon-2.png" alt="">
+                    <img src="./images/icon-2.png" alt="">
                     <div>
                         <h3>edtech.ltd</h3>
                         <p>2 days ago</p>
@@ -157,7 +157,7 @@
 
             <div class="box">
                 <div class="company">
-                    <img src="/images/icon-3.png" alt="">
+                    <img src="./images/icon-3.png" alt="">
                     <div>
                         <h3>software solutions</h3>
                         <p>posted today</p>
@@ -180,7 +180,7 @@
 
             <div class="box">
                 <div class="company">
-                    <img src="/images/icon-4.png" alt="">
+                    <img src="./images/icon-4.png" alt="">
                     <div>
                         <h3>IT world</h3>
                         <p>15 days ago</p>
@@ -203,7 +203,7 @@
 
             <div class="box">
                 <div class="company">
-                    <img src="/images/icon-5.png" alt="">
+                    <img src="./images/icon-5.png" alt="">
                     <div>
                         <h3>info statics</h3>
                         <p>1 day ago</p>
@@ -226,7 +226,7 @@
 
             <div class="box">
                 <div class="company">
-                    <img src="/images/icon-6.png" alt="">
+                    <img src="./images/icon-6.png" alt="">
                     <div>
                         <h3>mass india</h3>
                         <p>12 days ago</p>
@@ -249,7 +249,7 @@
 
             <div class="box">
                 <div class="company">
-                    <img src="/images/icon-8.png" alt="">
+                    <img src="./images/icon-8.png" alt="">
                     <div>
                         <h3>mass india</h3>
                         <p>12 days ago</p>
@@ -272,7 +272,7 @@
 
             <div class="box">
                 <div class="company">
-                    <img src="/images/icon-9.png" alt="">
+                    <img src="./images/icon-9.png" alt="">
                     <div>
                         <h3>mass india</h3>
                         <p>12 days ago</p>
@@ -295,7 +295,7 @@
 
             <div class="box">
                 <div class="company">
-                    <img src="/images/icon-3.png" alt="">
+                    <img src="./images/icon-3.png" alt="">
                     <div>
                         <h3>software solutions</h3>
                         <p>posted today</p>
@@ -318,7 +318,7 @@
 
             <div class="box">
                 <div class="company">
-                    <img src="/images/icon-4.png" alt="">
+                    <img src="./images/icon-4.png" alt="">
                     <div>
                         <h3>IT world</h3>
                         <p>15 days ago</p>
@@ -341,7 +341,7 @@
 
             <div class="box">
                 <div class="company">
-                    <img src="/images/icon-5.png" alt="">
+                    <img src="./images/icon-5.png" alt="">
                     <div>
                         <h3>info statics</h3>
                         <p>1 day ago</p>
@@ -364,7 +364,7 @@
 
             <div class="box">
                 <div class="company">
-                    <img src="/images/icon-6.png" alt="">
+                    <img src="./images/icon-6.png" alt="">
                     <div>
                         <h3>mass india</h3>
                         <p>12 days ago</p>
@@ -387,7 +387,7 @@
 
             <div class="box">
                 <div class="company">
-                    <img src="/images/icon-8.png" alt="">
+                    <img src="./images/icon-8.png" alt="">
                     <div>
                         <h3>mass india</h3>
                         <p>12 days ago</p>
@@ -410,7 +410,7 @@
 
             <div class="box">
                 <div class="company">
-                    <img src="/images/icon-9.png" alt="">
+                    <img src="./images/icon-9.png" alt="">
                     <div>
                         <h3>mass india</h3>
                         <p>12 days ago</p>
@@ -433,7 +433,7 @@
 
             <div class="box">
                 <div class="company">
-                    <img src="/images/icon-1.png" alt="">
+                    <img src="./images/icon-1.png" alt="">
                     <div>
                         <h3>tech infosys co.</h3>
                         <p>5 days ago</p>
@@ -525,7 +525,7 @@
 
             <div class="box">
                 <div class="company">
-                    <img src="/images/icon-4.png" alt="">
+                    <img src="./images/icon-4.png" alt="">
                     <div>
                         <h3>IT world</h3>
                         <p>15 days ago</p>
@@ -548,7 +548,7 @@
 
             <div class="box">
                 <div class="company">
-                    <img src="/images/icon-5.png" alt="">
+                    <img src="./images/icon-5.png" alt="">
                     <div>
                         <h3>info statics</h3>
                         <p>1 day ago</p>
@@ -571,7 +571,7 @@
 
             <div class="box">
                 <div class="company">
-                    <img src="/images/icon-6.png" alt="">
+                    <img src="./images/icon-6.png" alt="">
                     <div>
                         <h3>mass india</h3>
                         <p>12 days ago</p>
@@ -594,7 +594,7 @@
 
             <div class="box">
                 <div class="company">
-                    <img src="/images/icon-8.png" alt="">
+                    <img src="./images/icon-8.png" alt="">
                     <div>
                         <h3>mass india</h3>
                         <p>12 days ago</p>
@@ -617,7 +617,7 @@
 
             <div class="box">
                 <div class="company">
-                    <img src="/images/icon-9.png" alt="">
+                    <img src="./images/icon-9.png" alt="">
                     <div>
                         <h3>mass india</h3>
                         <p>12 days ago</p>
@@ -640,7 +640,7 @@
 
             <div class="box">
                 <div class="company">
-                    <img src="/images/icon-3.png" alt="">
+                    <img src="./images/icon-3.png" alt="">
                     <div>
                         <h3>software solutions</h3>
                         <p>posted today</p>
@@ -672,7 +672,7 @@
         <section class="grid">
             <div class="box">
                 <h3>quick links</h3>
-                <a href="home.html"><i class="fas fa-angle-right"></i>home</a>
+                <a href="index.html"><i class="fas fa-angle-right"></i>home</a>
                 <a href="about.html"><i class="fas fa-angle-right"></i>about us</a>
                 <a href="jobs.html"><i class="fas fa-angle-right"></i>jobs</a>
                 <a href="contact.html"><i class="fas fa-angle-right"></i>contact us</a>
