--- a/view_company.html
+++ b/view_company.html
@@ -13,9 +13,9 @@
     <header class="header">
         <section class="flex">
             <div id="menubtn" class="fas fa-bars-staggered"></div>
-            <a href="home.html" class="logo"><i class="fas fa-briefcase"></i>JobHire.</a>
+            <a href="index.html" class="logo"><i class="fas fa-briefcase"></i>JobHire.</a>
             <nav class="navbar">
-                <a href="home.html">home</a>
+                <a href="index.html">home</a>
                 <a href="about.html">about us</a>
                 <a href="jobs.html">jobs</a>
                 <a href="contact.html">contact us</a>
@@ -31,7 +31,7 @@
         <h1 class="heading">company details</h1>
         <div class="details">
             <div class="info">
-                <img src="images/icon-1.png" alt="">
+                <img src="./images/icon-1.png" alt="">
                 <h3>tech infosys co.</h3>
                 <p><i class="fas fa-map-marker-alt"></i>mumbai,india</p>
             </div>
@@ -64,7 +64,7 @@
 
             <div class="box">
                 <div class="company">
-                    <img src="/images/icon-1.png" alt="">
+                    <img src="./images/icon-1.png" alt="">
                     <div>
                         <h3>tech infosys co.</h3>
                         <p>5 days ago</p>
@@ -87,7 +87,7 @@
 
             <div class="box">
                 <div class="company">
-                    <img src="/images/icon-2.png" alt="">
+                    <img src="./images/icon-2.png" alt="">
                     <div>
                         <h3>tech infosys co.</h3>
                         <p>2 days ago</p>
@@ -110,7 +110,7 @@
 
             <div class="box">
                 <div class="company">
-                    <img src="/images/icon-3.png" alt="">
+                    <img src="./images/icon-3.png" alt="">
                     <div>
                         <h3>tech infosys co.</h3>
                         <p>posted today</p>
@@ -140,7 +140,7 @@
         <section class="grid">
             <div class="box">
                 <h3>quick links</h3>
-                <a href="home.html"><i class="fas fa-angle-right"></i>home</a>
+                <a href="index.html"><i class="fas fa-angle-right"></i>home</a>
                 <a href="about.html"><i class="fas fa-angle-right"></i>about us</a>
                 <a href="jobs.html"><i class="fas fa-angle-right"></i>jobs</a>
                 <a href="contact.html"><i class="fas fa-angle-right"></i>contact us</a>
